front-end Changes  - changed theme  - added search by meal type functionality  - all images are now in the images folder under /assets  - made register and login component homogeneous  - fixed page navigation overlapping issue  - displaying results on home page based on location.

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,7 +1,7 @@
 // $lt-gray: #ddd;
 // $background-dark: #512DA8;
 // $background-light: #9575CD;
-$background-pale:#3f51b5;
+$background-pale:#2d2d2d;
 
 
 
